test(unified): keep BOOP Sherpa RED on supported Java API