@@ -1,6 +1,7 @@
 package com.boop.alpha1;
 
 import org.junit.Test;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import static org.junit.Assert.assertTrue;
@@ -10,7 +11,7 @@ public final class BoopWakeSherpaNaturalConfigTest {
     @Test public void defaultBoopDoesNotRequireTrailingSilenceBeforeTrigger() throws Exception {
         Path path = Path.of("../../source/BoopSherpaWakeSpotter.java");
         if (!Files.isRegularFile(path)) path = Path.of("source/BoopSherpaWakeSpotter.java");
-        String source = Files.readString(path);
+        String source = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
         assertTrue("BOOP Sherpa wake must finalize without a trailing blank for natural one-breath commands",
                 source.contains("config.setNumTrailingBlanks(0);"));
     }
